--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "boilerplate",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,6 +15,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
+    "@commitlint/types": "^19.8.1",
     "husky": "^9.1.7",
     "turbo": "^2.5.6"
   }
