--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "git-info-setup": "bash scripts/git-info-setup.sh",
-    "prepare": "husky"
+    "prepare": "husky",
+    "commit": "commit"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
+    "@commitlint/prompt-cli": "^19.8.1",
     "@commitlint/types": "^19.8.1",
     "husky": "^9.1.7",
     "turbo": "^2.5.6"
