--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
   "scripts": {
     "git-info-setup": "bash scripts/git-info-setup.sh",
     "prepare": "husky",
-    "commit": "commit"
+    "cz": "git-cz"
+  },
+  "config": {
+    "commitizen": {
+      "path": "@commitlint/cz-commitlint"
+    }
   },
   "keywords": [],
   "author": "",
@@ -16,9 +21,12 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
+    "@commitlint/cz-commitlint": "^19.8.1",
     "@commitlint/prompt-cli": "^19.8.1",
     "@commitlint/types": "^19.8.1",
+    "commitizen": "^4.3.1",
     "husky": "^9.1.7",
+    "inquirer": "^9.3.7",
     "turbo": "^2.5.6"
   }
 }
