feat: add @repo/api

--- a/packages/typescript-config/node.jsonc
+++ b/packages/typescript-config/node.jsonc
@@ -3,6 +3,8 @@
   "extends": "./base.jsonc",
   "compilerOptions": {
     "lib": ["ESNext"],
-    "types": ["bun"]
+    "types": ["node"],
+    "noEmit": true,
+    "allowImportingTsExtensions": true
   }
 }
