--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "@repo/web",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -9,7 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/solid-js": "^5.1.0",
     "@repo/typescript-config": "workspace:^",
-    "astro": "^5.13.2"
+    "@trpc/client": "^11.5.0",
+    "astro": "^5.13.2",
+    "ky": "^1.9.0",
+    "solid-js": "^1.9.9"
   }
 }
