--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite --port 3000",
-    "start": "vite --port 3000",
+    "dev": "vite --port 7656",
+    "start": "vite --port 7656",
     "build": "vite build && tsc",
     "serve": "vite preview",
     "test": "vitest run"
@@ -14,6 +14,9 @@
     "@tanstack/router-plugin": "^1.121.3",
     "@tanstack/solid-router": "^1.121.3",
     "@tanstack/solid-router-devtools": "^1.121.3",
+    "@zag-js/accordion": "^1.21.9",
+    "@zag-js/solid": "^1.21.9",
+    "@zag-js/tooltip": "^1.21.9",
     "solid-js": "^1.9.4",
     "tailwindcss": "^4.0.6"
   },
