--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -21,6 +21,8 @@
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "typescript": "^5.7.2",
     "vite": "^6.0.11",
     "vite-plugin-solid": "^2.11.2"
