--- a/packages/tailwind-preset/package.json
+++ b/packages/tailwind-preset/package.json
@@ -1,13 +1,18 @@
 {
   "name": "@repo/tailwind-preset",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "type": "module",
+  "exports": {
+    ".": "./src/index.css",
+    "./theme.css": "./src/theme.css",
+    "./package.json": "./package.json"
   },
+  "description": "preset for tailwindcss",
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.15.0"
+  "packageManager": "pnpm@10.15.0",
+  "devDependencies": {
+    "tailwindcss": "^4.1.12"
+  }
 }
