--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "dev": "storybook dev -p 6006",
+    "build": "storybook build"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.1",
@@ -21,5 +21,10 @@
     "storybook-solidjs-vite": "^9.0.3",
     "vite": "^6.3.5",
     "vitest": "^3.2.4"
+  },
+  "dependencies": {
+    "@repo/tailwind-preset": "workspace:*",
+    "@zag-js/accordion": "^1.21.9",
+    "@zag-js/solid": "^1.21.9"
   }
 }
