--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "storybook dev -p 6006",
+    "dev": "storybook dev -p 6010",
     "build": "storybook build"
   },
   "devDependencies": {
@@ -19,12 +19,17 @@
     "solid-js": "^1.9.9",
     "storybook": "^9.1.3",
     "storybook-solidjs-vite": "^9.0.3",
+    "tw-animate-css": "^1.3.8",
     "vite": "^6.3.5",
     "vitest": "^3.2.4"
   },
   "dependencies": {
     "@repo/tailwind-preset": "workspace:*",
+    "@tailwindcss/vite": "^4.1.12",
     "@zag-js/accordion": "^1.21.9",
-    "@zag-js/solid": "^1.21.9"
+    "@zag-js/solid": "^1.21.9",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.12"
   }
 }
