--- a/packages/tailwind-preset/package.json
+++ b/packages/tailwind-preset/package.json
@@ -14,5 +14,9 @@
   "packageManager": "pnpm@10.15.0",
   "devDependencies": {
     "tailwindcss": "^4.1.12"
+  },
+  "dependencies": {
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^3.3.1"
   }
 }
