--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -10,6 +10,7 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@repo/components": "workspace:*",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/router-plugin": "^1.121.3",
     "@tanstack/solid-router": "^1.121.3",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5.7.2",
     "vite": "^6.0.11",
     "vite-plugin-solid": "^2.11.2"
