--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,10 +10,16 @@
   },
   "dependencies": {
     "@astrojs/solid-js": "^5.1.0",
+    "@repo/components": "workspace:*",
     "@repo/typescript-config": "workspace:^",
+    "@tailwindcss/vite": "^4.1.13",
     "@trpc/client": "^11.5.0",
     "astro": "^5.13.2",
     "ky": "^1.9.0",
-    "solid-js": "^1.9.9"
+    "solid-js": "^1.9.9",
+    "tailwindcss": "^4.1.13"
+  },
+  "devDependencies": {
+    "tw-animate-css": "^1.3.8"
   }
 }
