--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "solid-devtools": "^0.34.3",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5.7.2",
     "vite": "^6.0.11",
